3.0.9

- Fixed subtle bug in ChunkedHashStore that could cause an out-of-bounds
  access to an array in the (very rare) case of a retry.

- The documentation of Jenkins hashes was still stating, erroneously,
  that we return the first computed value (we return the third one).

3.0.8

- Significantly improved speed of SimpleSelect and all related
  classes (Elias-Fano lists, etc.).

- Improved speed of MinimalPerfectHashFunction.

- Integer overflow bugs fixes (thanks to Tim Potter).

3.0.7

- Some monotone hash functions would crash during construction due to an
  integer overflow. Thanks to Tim Potter for reporting this bug.

3.0.6

- Switched to SLF4J for logging.

3.0.5

- The Ivy dependency file has been Maven-normalized (now we have a
  default "compile" scope).

3.0.3

- Replaced methods from it.unimi.dsi.bits.Fast with equivalent methods in
  Integer/Long, as recent JVMs intrinsify such methods.

3.0.2

- Fixed minor inconsistencies in the values returned on empty functions
  (some implementations would actually throw an exception). Thanks to
  Valentin Tablan for reporting the problem.

3.0

- WARNING: This release has minor binary incompatibilities with previous
  releases, mainly due to the move from the interface
  it.unimi.dsi.util.LongBigList to the now standard
  it.unimi.dsi.fasutil.longs.LongBigList. It is part of a parallel release
  of fastutil, the DSI Utilities, Sux4J, MG4J, WebGraph, etc. that were
  all modified to fit the new interface, and that prepare the way for our
  "big" versions, that is, supporting >2^31 entries in arrays (simulated),
  elements in lists, terms, documents, nodes, etc. Please read our (short)
  "Moving Java to Big Data" document (JavaBig.pdf) for details.

- We now require Java 6.

- it.unimi.dsi.util.LongBigList is dead. Long live to
  it.unimi.dsi.fastutil.longs.LongBigList. We're sorry for the
  nuisance--adapting the code should be very easy (and we warned you
  anyway :).
