@@ -1,10 +1,19 @@
 3.0.9
 
+- Added for efficiency a lowerBitsMask field to
+  EliasFanoMonotoneLongBigList, which made it necessary to bump the
+  serialVersionUID.
+
+- Aligned the behaviour with that of MG4J's implementation--the upper
+  bound is not necessarily strict.
+
 - Fixed subtle bug in ChunkedHashStore that could cause an out-of-bounds
   access to an array in the (very rare) case of a retry.
 
 - The documentation of Jenkins hashes was still stating, erroneously,
   that we return the first computed value (we return the third one).
+
+- Deprecated length() methods have been removed.
 
 3.0.8
 
